actualizacion de datos

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>qPos - Chiperia</title>
     <link href="./css/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/swiper-bundle.min.css" />
-    <link rel="stylesheet" href=".css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <style>
       body, html {
         height: 100%;
@@ -46,10 +46,10 @@
       <span class="text-4xl font-bold">Toca para pedir</span>
       <span class="text-xl">Tap to order</span>
     </a>
-  </div>
+  </div>º
 </div>
 
-<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<script src="./js/swiper-bundle.min.js"></script>
 <script>
   const swiper = new Swiper('.swiper-container', {
     loop: true,
