Actualizacion de servidor

--- a/menu.html
+++ b/menu.html
@@ -28,94 +28,16 @@
                 </a>
                 <ul class="flex flex-col space-y-2 mt-12">
                     <li>
-                        <a href="#" class="flex items-center flex-col">
-                            <span class="flex items-center justify-center h-12 w-12 rounded-2xl" x-bind:class="{
-                  'hover:bg-cyan-400 text-cyan-100': activeMenu !== 'pos',
-                  'bg-cyan-300 shadow-lg text-white': activeMenu === 'pos',
-                }">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
-                                    stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                        d="M9 7h6m0 10v-3m-3 3h.01M9 17h.01M9 14h.01M12 14h.01M15 11h.01M12 11h.01M9 11h.01M7 21h10a2 2 0 002-2V5a2 2 0 00-2-2H7a2 2 0 00-2 2v14a2 2 0 002 2z" />
-                                </svg>
-                            </span>
-                            <p>Bebidas</p>
-                        </a>
+                        <div x-show="filteredCategorias().length" class="grid grid-cols-1 gap-4 pb-3">
+                            <template x-for="categoria in filteredCategorias()" :key="categoria">
+                                <div class="select-none cursor-pointer transition-shadow overflow-hidden rounded-2xl bg-white shadow hover:shadow-lg">
+                                    <p class="text-center font-semibold text-lg" x-text="categoria"></p>
+                                </div>
+                            </template>
+                        </div>
                     </li>
-                    <li>
-                        <a href="#" class="flex items-center flex-col">
-                            <span class="flex items-center justify-center h-12 w-12 rounded-2xl" x-bind:class="{
-                  'hover:bg-cyan-400 text-cyan-100': activeMenu !== 'pos',
-                  'bg-cyan-300 shadow-lg text-white': activeMenu === 'pos',
-                }">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
-                                    stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                        d="M9 7h6m0 10v-3m-3 3h.01M9 17h.01M9 14h.01M12 14h.01M15 11h.01M12 11h.01M9 11h.01M7 21h10a2 2 0 002-2V5a2 2 0 00-2-2H7a2 2 0 00-2 2v14a2 2 0 002 2z" />
-                                </svg>
-                            </span>
-                            <p>Cafe y Cocido</p>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="#" class="flex items-center flex-col">
-                            <span class="flex items-center justify-center h-12 w-12 rounded-2xl" x-bind:class="{
-                  'hover:bg-cyan-400 text-cyan-100': activeMenu !== 'pos',
-                  'bg-cyan-300 shadow-lg text-white': activeMenu === 'pos',
-                }">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
-                                    stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                        d="M9 7h6m0 10v-3m-3 3h.01M9 17h.01M9 14h.01M12 14h.01M15 11h.01M12 11h.01M9 11h.01M7 21h10a2 2 0 002-2V5a2 2 0 00-2-2H7a2 2 0 00-2 2v14a2 2 0 002 2z" />
-                                </svg>
-                            </span>
-                            <p>Comida</p>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="#" class="flex items-center">
-                            <span class="flex items-center justify-center text-cyan-100 hover:bg-cyan-400 h-12 w-12 rounded-2xl">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
-                                    stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                        d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01" />
-                                </svg>
-                            </span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="flex items-center">
-                            <span class="flex items-center justify-center text-cyan-100 hover:bg-cyan-400 h-12 w-12 rounded-2xl">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
-                                    stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                        d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10" />
-                                </svg>
-                            </span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="flex items-center">
-                            <span class="flex items-center justify-center text-cyan-100 hover:bg-cyan-400 h-12 w-12 rounded-2xl">
-                                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                        d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z">
-                                    </path>
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                        d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path>
-                                </svg>
-                            </span>
-                        </a>
-                    </li>
+                    
                 </ul>
-               <!--  <a href="https://github.com/emsifa/tailwind-pos" target="_blank" class="mt-auto flex items-center justify-center text-cyan-200 hover:text-cyan-100 h-10 w-10 focus:outline-none">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 20 20" fill="currentColor">
-                        <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z" clip-rule="evenodd" />
-                    </svg>
-                </a> -->
 				<div x-on:click="modalConfig()" class="mt-auto flex items-center justify-center text-cyan-200 hover:text-cyan-100 h-10 w-10 focus:outline-none">
 						<svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
 							xmlns="http://www.w3.org/2000/svg">
@@ -399,14 +321,14 @@
                         </button>
                     </div>
                     <div class="text-left flex flex-row pt-4">
-                        <button x-on:click="selectPayment('debito')" class="flex flex-col items-center w-full mx-3 rounded-xl bg-white shadow-xl focus:qpos-bg1 hover:qpos-bg1 px-4 py-4">
+                        <button x-on:click="pay('qr')" class="flex flex-col items-center w-full mx-3 rounded-xl bg-white shadow-xl focus:qpos-bg1 hover:qpos-bg1 px-4 py-4">
                             <img src="./img/app/qr.png" class="w-28" alt="">
                             <div class="pt-4">
                                 <h6 class="text-gray-950 mb-0 font-semibold text-2xl">QR en POS</h6>
                                 <!-- Texto debajo del icono -->
                             </div>
                         </button>
-                        <button x-on:click="selectPayment('credito')" class="flex flex-col items-center w-full mx-3 rounded-xl bg-white shadow-xl focus:qpos-bg1 hover:qpos-bg1 px-4 py-4">
+                        <button x-on:click="selectPayment('efectivo')" class="flex flex-col items-center w-full mx-3 rounded-xl bg-white shadow-xl focus:qpos-bg1 hover:qpos-bg1 px-4 py-4">
                             <img src="./img/app/cash.png" class="w-28" alt="">
                             <div class="pt-4">
                                 <h6 class="text-gray-950 mb-0 font-semibold text-2xl">Efectivo en caja</h6>
