--- a/menu.html
+++ b/menu.html
@@ -304,7 +304,7 @@
             </div>
             <div x-show="isShowModalPayment" class="w-96 rounded-3xl bg-white shadow-xl overflow-hidden z-10" x-transition:enter="transition ease-out duration-100" x-transition:enter-start="opacity-0 transform scale-90" x-transition:enter-end="opacity-100 transform scale-100"
             x-transition:leave="transition ease-in duration-100" x-transition:leave-start="opacity-100 transform scale-100" x-transition:leave-end="opacity-0 transform scale-90" style="width:650px">
-                <div x-show="!isLoading && !isAux && !isSuccess">
+                <div x-show="!isLoading && !isAux && !isSuccess && !isError">
                     <div class="w-96 rounded-3xl p-8 bg-white w-full">
                         <div class="pb-4">
                             <h3 class="text-3xl font-semibold mb-1">¿Cómo vas a pagar?</h3>
@@ -368,6 +368,21 @@
                         <div class=" py-3">
                             <button x-on:click="newOrder()" class="text-center w-full rounded-xl qpos-bg1 shadow-xl focus:bg-white hover:qpos-bg1 px-4 py-4">
                                 <h1 class="text-2xl font-semibold text-center">Realizar otro pedido</h1>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <div x-show="isError">
+                    <div class="w-96 rounded-3xl p-8 bg-white w-full">
+                        <div id="lottieContainer-ERROR"></div>
+                        <div class="pb-4 text-center">
+                            <h3 class="text-3xl font-semibold mb-1" id="title">¡ALGO SALIÓ MAL!</h3>
+                            <p class="text-lg px-4" id="message">Tuvimos un</p>
+                        </div>
+                        <div class=" py-3">
+                            <button x-on:click="pay('efectivo')" class="text-center w-full rounded-xl qpos-bg1 shadow-xl focus:bg-white hover:qpos-bg1 px-4 py-4">
+                                <h1 class="text-2xl font-semibold text-center">TERMINAR PEDIDO EN CAJA</h1>
                             </button>
                         </div>
                     </div>
