--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>qPos - Chiperia</title>
     <link href="./css/tailwind.min.css" rel="stylesheet">
+    <script src="./js/index-min.js"></script>
     <link rel="stylesheet" href="./css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -37,14 +38,15 @@
 
   <!-- Div inferior que ocupa el 15% de la pantalla -->
   <div class="w-full h-40 flex items-center justify-center animate-color-change">
-    <a href="menu.html" class="text-white w-full h-2/3 flex flex-col items-center justify-center">
-      <span class="text-4xl font-bold">Toca para pedir</span>
-      <span class="text-xl">Tap to order</span>
+    <a href="menu.html" id="link" class="text-white w-full h-2/3 flex flex-col items-center justify-center">
+      <span class="text-4xl font-bold" id="tocaParaPedir">Toca para pedir</span>
+      <span class="text-xl" id="tocaParaPedirEn">Tap to order</span>
     </a>
   </div>
 </div>
 
 <script src="./js/swiper-bundle.min.js"></script>
+<script src="./js/script.js"></script>
 <script>
   const swiper = new Swiper('.swiper', {
     loop: true,
@@ -57,6 +59,10 @@
       clickable: true,
     },
   });
+
+  initPDV();
+  setInterval(checkServer, 180000);
+  
 </script>
 
 <style>
