--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La Casa de la Chipa -  Qoarto Lab PDV</title>
+    <title>Inicio</title>
     <link href="./css/tailwind.min.css" rel="stylesheet">
     <script src="./js/index-min.js"></script>
     <link rel="stylesheet" href="./css/swiper-bundle.min.css" />
@@ -76,7 +76,9 @@
 
   initPDV();
   setInterval(checkServer, 180000);
-  
+  const fullscreenButton = document.getElementById('link');
+  fullscreenButton.addEventListener('click', enterFullScreen);
+
 </script>
 
 <style>
